<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_query_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inquire"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_user_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:textColor="#4E504B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ws"
                android:background="@null"
                android:hint="@string/entry_user"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密    码："
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_upass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/entry_pass"
                android:text="123456"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textColor="#EF1D9B"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>